--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+    margin-top: 50px;
 }
 
 .footer-logo{
@@ -28,6 +29,7 @@
 
 .footer-links li{
     cursor: pointer;
+    text-decoration: underline;
 }
 
 .footer-socials-icon{
